changes in formatting

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <title>Furnishh | Home</title>
 </head>
 <body>  
-  <nav class="navbar">
+  <nav>
     <div class="navbar-container">
-      <span class="logo">
-        <h1>Furnishh</h1>
-      </span>
+      <span class="logo"><h1>Furnishh</h1></span>
       <div class="navbar-links">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -30,7 +28,6 @@
       </div>
     </div>                          
   </nav>
-
   
   <div class="container">
     <!-- Showcase -->
@@ -51,9 +48,7 @@
 
   <!-- Products section -->
   <section class="products">
-    <div class="container" id="products-container">
-      
-    </div>
+    <div class="container" id="products-container"></div>
   </section>
 
   <!-- Cart -->
@@ -64,8 +59,7 @@
       </span>
       <h2>Your cart</h2>
       <div class="cart-content">
-        <!-- Cart Items here -->
-        
+        <!-- Cart Items here -->        
       </div>
       <div class="cart-footer">
         <h3>Total: $ <span class="cart-total">0</span></h3>
